# JBRAVO_Screener

./: .env.vscode  .gitignore  .pre-commit-config.yaml  .setup  CHANGELOG.md  README.md  RUNBOOK.md  alpaca_test.py  backtest.py  backtest_results.csv  build_frontend_pythonanywhere.sh  config.json  dashboard_app.py  execute_trades.py  h origin main  install_node_pythonanywhere.sh  metrics.py  openapi.yaml  pyproject.toml  raspatrick_pythonanywhere_com_wsgi.py  requirements-dev.txt  requirements.txt  run_pipeline.py  screener.py  tailwind.config.js  test_db_direct.py  verify_db.py  verify_env.py  weekly_summary.py
.well-known/: ai-plugin.json
assets/: index.html  screener_badges.css  typography.css
config/: ranker.yml
configs/: ranker_v2.yml  ranker_v2_changelog.md
dashboards/: dashboard_app.py  data_io.py  db_client.py  ml_overview_api.py  ml_tab.py  overview.py  pipeline_tab.py  screener_health.py  utils.py
data/: backtest_results.csv  executed_trades.csv  historical_candidates.csv  last_premarket_run.json  metrics_summary.csv  open_positions.csv  top_candidates.csv  trades_log.csv
docs/: AI_CONTEXT.md  CONTEXT_PACK.md  INDEX.md  Ranking.md  TECH_DEBT.md  backtest_data_flow.md  brand_assets.md  dashboard_review.md  logging_metrics.md  qa_plan.md  run_pipeline_flow.mmd  run_pipeline_flow_combined_letter.mmd  run_pipeline_flow_data.mmd  run_pipeline_flow_process.mmd  runbook.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: db.py  (+65 more)
(+344 files in other folders)
