[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jbravo"
version = "0.0.1"
dependencies = [
    "alpaca-trade-api",
    "pandas",
    "numpy",
    "plotly",
    "dash",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "alpaca_optional: tests that can run without Alpaca credentials",
    "slow: slow/integration tests that are not run by default",
]
