[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jbravo"
version = "0.0.1"
dependencies = [
    "alpaca-trade-api",
    "pandas",
    "numpy",
    "plotly",
    "dash",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "alpaca_optional: tests that can run without Alpaca credentials",
    "integration: tests that hit real PostgreSQL and external services",
    "slow: slow/integration tests that are not run by default",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "data",
    "logs",
    "reports",
    "tmp",
    "frontend/node_modules",
    "frontend/dist",
]

[tool.ruff.lint]
select = ["E9"]
